# crate-proofs

./: .gitignore  AGENTS.md  COVERAGE.md  README.md  rust-toolchain.toml  verify.bash
adler2/2.0.0/: Cargo.toml  PROVENANCE.md  verify-all.bash
arrayvec/0.7.8/: Cargo.toml
byteorder/1.5.0/: Cargo.toml  Cargo.toml.orig  PROVENANCE.md
bytes/1.11.1/: Cargo.toml
cobs/0.5.1/: .cargo_vcs_info.json  CHANGELOG.md  Cargo.toml  PROVENANCE.md
crc/3.4.0/: Cargo.toml  Cargo.toml.orig  verify-all.bash
creusot-libs/: Cargo.toml
creusot-libs/creusot-std-proc/src/creusot/: doc.rs  erasure.rs  logic.rs
creusot-libs/creusot-std/src/: peano.rs  std.rs
creusot-libs/creusot-std/src/ghost/: invariant.rs
creusot-libs/creusot-std/src/ghost/resource/: auth.rs
creusot-libs/creusot-std/src/logic/: int.rs  seq.rs  well_founded.rs
creusot-libs/creusot-std/src/logic/ra/: auth.rs  fmap.rs  option.rs  positive.rs  prod.rs  view.rs
creusot-libs/creusot-std/src/std/: chunks_exact_ext.rs  cow.rs  fmt.rs  iter.rs  ptr.rs  slice.rs  string.rs
docs/: verification-playbook.md
fixedbitset/0.5.7/: PROVENANCE.md
fnv/1.0.7/: Cargo.toml  Cargo.toml.orig  PROVENANCE.md
fugit/0.4.0/: Cargo.toml  Cargo.toml.orig
hashbrown/0.17.1/: PROVENANCE.md  verify-all.bash
hashbrown/0.17.1/verification/: Cargo.toml  why3find.json
heapless/0.9.2/: Cargo.toml  verify-all.bash
hex/0.4.3/: Cargo.toml  PROVENANCE.md  verify-all.bash
percent-encoding/2.3.2/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig  PROVENANCE.md  verify-all.bash
rustc-hash/2.1.3/: Cargo.toml  Cargo.toml.orig  (+1 more)
(+49 files in other folders)
