[workspace]
resolver = "2"
members = ["creusot-std", "creusot-std-proc", "pearlite-syn"]

[workspace.package]
version = "0.11.0-dev"
documentation = "https://doc.creusot.rs/creusot_std/"
readme = "README.md"
keywords = ["verification"]
repository = "https://github.com/creusot-rs/creusot"
homepage = "https://creusot.rs"
categories = ["development-tools"]
